// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`User > renders with avatar slot correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">Avatar slot<div data-slot="wrapper" class="">
    <!--v-if-->
    <p data-slot="name" class="">Benjamin Canac</p>
    <p data-slot="description" class="">Software Engineer</p>
  </div>
</div>"
`;

exports[`User > renders with description correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <p data-slot="name" class="">Benjamin Canac</p>
    <p data-slot="description" class="">Software Engineer</p>
  </div>
</div>"
`;

exports[`User > renders with name correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <p data-slot="name" class="">Benjamin Canac</p>
    <!--v-if-->
  </div>
</div>"
`;
